-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.0.0 RC
-
None
-
77abbab225250c3709ab18b077edeb57b533244a 62f180f9589bdedc16bb5c019e4179aa707ad9b3 (qt/qtquicktimeline/dev)
/QtQmlModels/6.0.0/QtQmlModels -I/home/qt/work/install/include/QtQml/6.0.0 -I/home/qt/work/install/include/QtQml/6.0.0/QtQml -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/qtquicktimelineplugin.o qtquicktimelineplugin.cpp
agent:2020/11/10 00:10:04 build.go:379: In file included from qquickkeyframe.cpp:33:
agent:2020/11/10 00:10:04 build.go:379: keyframedatautils_p.h: In function ‘void writeValue(QCborStreamWriter&, const QVariant&)’:
agent:2020/11/10 00:10:04 build.go:379: keyframedatautils_p.h:234:68: warning: ‘QVariant::Type QVariant::type() const’ is deprecated: Use metaType(). [-Wdeprecated-declarations]
agent:2020/11/10 00:10:04 build.go:379: QMetaType::Type type = static_cast<QMetaType::Type>(value.type());
agent:2020/11/10 00:10:04 build.go:379: ^
agent:2020/11/10 00:10:04 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmllist.h:45,
agent:2020/11/10 00:10:04 build.go:379: from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:04 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:04 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:04 build.go:379: from qquickkeyframe.cpp:30:
agent:2020/11/10 00:10:04 build.go:379: /home/qt/work/install/include/QtCore/qvariant.h:337:10: note: declared here
agent:2020/11/10 00:10:04 build.go:379: Type type() const
agent:2020/11/10 00:10:04 build.go:379: ^~~~
agent:2020/11/10 00:10:05 build.go:379: /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_FOREACH -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_PLUGIN -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtOpenGL -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtQmlModels -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtQuick/6.0.0 -I/home/qt/work/install/include/QtQuick/6.0.0/QtQuick -I/home/qt/work/install/include/QtGui/6.0.0 -I/home/qt/work/install/include/QtGui/6.0.0/QtGui -I/home/qt/work/install/include/QtQmlModels/6.0.0 -I/home/qt/work/install/include/QtQmlModels/6.0.0/QtQmlModels -I/home/qt/work/install/include/QtQml/6.0.0 -I/home/qt/work/install/include/QtQml/6.0.0/QtQml -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/moc_qquickkeyframe_p.o .moc/moc_qquickkeyframe_p.cpp
agent:2020/11/10 00:10:06 build.go:379: qquickkeyframe.cpp: In member function ‘QQmlListProperty<QQuickKeyframe> QQuickKeyframeGroup::keyframes()’:
agent:2020/11/10 00:10:06 build.go:379: qquickkeyframe.cpp:314:61: error: invalid conversion from ‘int (*)(QQmlListProperty<QQuickKeyframe>*)’ to ‘QQmlListProperty<QQuickKeyframe>::CountFunction’ {aka ‘long long int (*)(QQmlListProperty<QQuickKeyframe>*)’} [-fpermissive]
agent:2020/11/10 00:10:06 build.go:379: QQuickKeyframeGroupPrivate::clear_keyframes };
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:75: note: initializing argument 4 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QQuickKeyframe; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QQuickKeyframe>*, QQuickKeyframe*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QQuickKeyframe>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QQuickKeyframe* (*)(QQmlListProperty<QQuickKeyframe>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QQuickKeyframe>*)]’
agent:2020/11/10 00:10:06 build.go:379: QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t,
agent:2020/11/10 00:10:06 build.go:379: ~~~~~~~~~~~~~~^
agent:2020/11/10 00:10:06 build.go:379: qquickkeyframe.cpp:314:61: error: invalid conversion from ‘QQuickKeyframe* (*)(QQmlListProperty<QQuickKeyframe>*, int)’ to ‘QQmlListProperty<QQuickKeyframe>::AtFunction’ {aka ‘QQuickKeyframe* (*)(QQmlListProperty<QQuickKeyframe>*, long long int)’} [-fpermissive]
agent:2020/11/10 00:10:06 build.go:379: QQuickKeyframeGroupPrivate::clear_keyframes };
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:89: note: initializing argument 5 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QQuickKeyframe; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QQuickKeyframe>*, QQuickKeyframe*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QQuickKeyframe>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QQuickKeyframe* (*)(QQmlListProperty<QQuickKeyframe>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QQuickKeyframe>*)]’
agent:2020/11/10 00:10:06 build.go:379: QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t,
agent:2020/11/10 00:10:06 build.go:379: ~~~~~~~~~~~^
agent:2020/11/10 00:10:06 build.go:379: qquickkeyframe.cpp: In member function ‘virtual QVariant QQuickKeyframe::evaluate(QQuickKeyframe*, qreal, int) const’:
agent:2020/11/10 00:10:06 build.go:379: qquickkeyframe.cpp:520:30: warning: ‘bool QVariant::convert(int)’ is deprecated [-Wdeprecated-declarations]
agent:2020/11/10 00:10:06 build.go:379: preValue.convert(userType);
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmllist.h:45,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtCore/qvariant.h:263:10: note: declared here
agent:2020/11/10 00:10:06 build.go:379: bool convert(int targetTypeId)
agent:2020/11/10 00:10:06 build.go:379: ^~~~~~~
agent:2020/11/10 00:10:06 build.go:379: qquickkeyframe.cpp:522:36: warning: ‘bool QVariant::convert(int)’ is deprecated [-Wdeprecated-declarations]
agent:2020/11/10 00:10:06 build.go:379: convertedValue.convert(userType);
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmllist.h:45,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtCore/qvariant.h:263:10: note: declared here
agent:2020/11/10 00:10:06 build.go:379: bool convert(int targetTypeId)
agent:2020/11/10 00:10:06 build.go:379: ^~~~~~~
agent:2020/11/10 00:10:06 build.go:379: qquicktimeline.cpp: In member function ‘QQmlListProperty<QQuickKeyframeGroup> QQuickTimeline::keyframeGroups()’:
agent:2020/11/10 00:10:06 build.go:379: qquicktimeline.cpp:219:56: error: invalid conversion from ‘int (*)(QQmlListProperty<QQuickKeyframeGroup>*)’ to ‘QQmlListProperty<QQuickKeyframeGroup>::CountFunction’ {aka ‘long long int (*)(QQmlListProperty<QQuickKeyframeGroup>*)’} [-fpermissive]
agent:2020/11/10 00:10:06 build.go:379: QQuickTimelinePrivate::clear_keyframes };
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline_p.h:44,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:75: note: initializing argument 4 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QQuickKeyframeGroup; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QQuickKeyframeGroup>*, QQuickKeyframeGroup*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QQuickKeyframeGroup>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QQuickKeyframeGroup* (*)(QQmlListProperty<QQuickKeyframeGroup>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QQuickKeyframeGroup>*)]’
agent:2020/11/10 00:10:06 build.go:379: QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t,
agent:2020/11/10 00:10:06 build.go:379: ~~~~~~~~~~~~~~^
agent:2020/11/10 00:10:06 build.go:379: qquicktimeline.cpp:219:56: error: invalid conversion from ‘QQuickKeyframeGroup* (*)(QQmlListProperty<QQuickKeyframeGroup>*, int)’ to ‘QQmlListProperty<QQuickKeyframeGroup>::AtFunction’ {aka ‘QQuickKeyframeGroup* (*)(QQmlListProperty<QQuickKeyframeGroup>*, long long int)’} [-fpermissive]
agent:2020/11/10 00:10:06 build.go:379: QQuickTimelinePrivate::clear_keyframes };
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline_p.h:44,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:89: note: initializing argument 5 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QQuickKeyframeGroup; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QQuickKeyframeGroup>*, QQuickKeyframeGroup*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QQuickKeyframeGroup>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QQuickKeyframeGroup* (*)(QQmlListProperty<QQuickKeyframeGroup>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QQuickKeyframeGroup>*)]’
agent:2020/11/10 00:10:06 build.go:379: QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t,
agent:2020/11/10 00:10:06 build.go:379: ~~~~~~~~~~~^
agent:2020/11/10 00:10:06 build.go:379: qquicktimeline.cpp: In member function ‘QQmlListProperty<QQuickTimelineAnimation> QQuickTimeline::animations()’:
agent:2020/11/10 00:10:06 build.go:379: qquicktimeline.cpp:229:57: error: invalid conversion from ‘int (*)(QQmlListProperty<QQuickTimelineAnimation>*)’ to ‘QQmlListProperty<QQuickTimelineAnimation>::CountFunction’ {aka ‘long long int (*)(QQmlListProperty<QQuickTimelineAnimation>*)’} [-fpermissive]
agent:2020/11/10 00:10:06 build.go:379: QQuickTimelinePrivate::clear_animations };
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline_p.h:44,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:75: note: initializing argument 4 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QQuickTimelineAnimation; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QQuickTimelineAnimation>*, QQuickTimelineAnimation*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QQuickTimelineAnimation>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QQuickTimelineAnimation* (*)(QQmlListProperty<QQuickTimelineAnimation>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QQuickTimelineAnimation>*)]’
agent:2020/11/10 00:10:06 build.go:379: QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t,
agent:2020/11/10 00:10:06 build.go:379: ~~~~~~~~~~~~~~^
agent:2020/11/10 00:10:06 build.go:379: qquicktimeline.cpp:229:57: error: invalid conversion from ‘QQuickTimelineAnimation* (*)(QQmlListProperty<QQuickTimelineAnimation>*, int)’ to ‘QQmlListProperty<QQuickTimelineAnimation>::AtFunction’ {aka ‘QQuickTimelineAnimation* (*)(QQmlListProperty<QQuickTimelineAnimation>*, long long int)’} [-fpermissive]
agent:2020/11/10 00:10:06 build.go:379: QQuickTimelinePrivate::clear_animations };
agent:2020/11/10 00:10:06 build.go:379: ^
agent:2020/11/10 00:10:06 build.go:379: In file included from /home/qt/work/install/include/QtQml/qqmlprivate.h:59,
agent:2020/11/10 00:10:06 build.go:379: from /home/qt/work/install/include/QtQml/qqml.h:43,
agent:2020/11/10 00:10:06 build.go:379: from qquickkeyframe_p.h:47,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline_p.h:44,
agent:2020/11/10 00:10:06 build.go:379: from qquicktimeline.cpp:30:
agent:2020/11/10 00:10:06 build.go:379: /home/qt/work/install/include/QtQml/qqmllist.h:76:89: note: initializing argument 5 of ‘QQmlListProperty<T>::QQmlListProperty(QObject*, void*, QQmlListProperty<T>::AppendFunction, QQmlListProperty<T>::CountFunction, QQmlListProperty<T>::AtFunction, QQmlListProperty<T>::ClearFunction) [with T = QQuickTimelineAnimation; QQmlListProperty<T>::AppendFunction = void (*)(QQmlListProperty<QQuickTimelineAnimation>*, QQuickTimelineAnimation*); QQmlListProperty<T>::CountFunction = long long int (*)(QQmlListProperty<QQuickTimelineAnimation>*); qsizetype = long long int; QQmlListProperty<T>::AtFunction = QQuickTimelineAnimation* (*)(QQmlListProperty<QQuickTimelineAnimation>*, long long int); QQmlListProperty<T>::ClearFunction = void (*)(QQmlListProperty<QQuickTimelineAnimation>*)]’
agent:2020/11/10 00:10:06 build.go:379: QQmlListProperty(QObject *o, void *d, AppendFunction a, CountFunction c, AtFunction t,
agent:2020/11/10 00:10:06 build.go:379: ~~~~~~~~~~~^
agent:2020/11/10 00:10:07 build.go:379: /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_FOREACH -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_PLUGIN -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtOpenGL -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtQmlModels -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtQuick/6.0.0 -I/home/qt/work/install/include/QtQuick/6.0.0/QtQuick -I/home/qt/work/install/include/QtGui/6.0.0 -I/home/qt/work/install/include/QtGui/6.0.0/QtGui -I/home/qt/work/install/include/QtQmlModels/6.0.0 -I/home/qt/work/install/include/QtQmlModels/6.0.0/QtQmlModels -I/home/qt/work/install/include/QtQml/6.0.0 -I/home/qt/work/install/include/QtQml/6.0.0/QtQml -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/moc_qquicktimeline_p.o .moc/moc_qquicktimeline_p.cpp
agent:2020/11/10 00:10:08 build.go:379: /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_FOREACH -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_PLUGIN -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_QUICK_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtOpenGL -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtQmlModels -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtQuick/6.0.0 -I/home/qt/work/install/include/QtQuick/6.0.0/QtQuick -I/home/qt/work/install/include/QtGui/6.0.0 -I/home/qt/work/install/include/QtGui/6.0.0/QtGui -I/home/qt/work/install/include/QtQmlModels/6.0.0 -I/home/qt/work/install/include/QtQmlModels/6.0.0/QtQmlModels -I/home/qt/work/install/include/QtQml/6.0.0 -I/home/qt/work/install/include/QtQml/6.0.0/QtQml -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/moc_qquicktimelineanimation_p.o .moc/moc_qquicktimelineanimation_p.cpp
agent:2020/11/10 00:10:08 build.go:379: make[3]: *** [Makefile:1977: .obj/qquicktimeline.o] Error 1
agent:2020/11/10 00:10:08 build.go:379: make[3]: *** Waiting for unfinished jobs....
agent:2020/11/10 00:10:08 build.go:379: make[3]: *** [Makefile:1600: .obj/qquickkeyframe.o] Error 1
agent:2020/11/10 00:10:11 build.go:379: make[3]: Leaving directory '/home/qt/work/qt/qtquicktimeline/src/imports/timeline'
agent:2020/11/10 00:10:11 build.go:379: make[2]: *** [Makefile:47: sub-timeline-make_first] Error 2
agent:2020/11/10 00:10:11 build.go:379: make[2]: Leaving directory '/home/qt/work/qt/qtquicktimeline/src/imports'
agent:2020/11/10 00:10:11 build.go:379: make[1]: *** [Makefile:47: sub-imports-make_first] Error 2
agent:2020/11/10 00:10:11 build.go:379: make[1]: Leaving directory '/home/qt/work/qt/qtquicktimeline/src'
agent:2020/11/10 00:10:11 build.go:379: make: *** [Makefile:48: sub-src-make_first] Error 2
agent:2020/11/10 00:10:11 build.go:430: Process finished with error: exit status 2
agent:2020/11/10 00:10:11 build.go:654: Executing scheduled instruction 1 of 1 - Upload all core dumps if there are some
agent:2020/11/10 00:10:11 build.go:563: Skip uploading core files because CORE_FILES_PATH is not set in the environment
agent:2020/11/10 00:10:11 build.go:662:
agent:2020/11/10 00:10:11 agent.go:280: Build failed
Details: https://testresults.qt.io/coin/integration/qt/qtquicktimeline/tasks/1604966901
Tested changes (refs/builds/qtci/dev/1604966837):
https://codereview.qt-project.org/c/qt/qtquicktimeline/+/321059/1 Update dependencies on 'dev' in qt/qtquicktimeline
| For Gerrit Dashboard: QTBUG-88361 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 321140,2 | Adjust to QQmlListProperty using qsizetype | dev | qt/qtquicktimeline | Status: MERGED | +2 | 0 |