Adjust to QQmlListProperty using qsizetype

Fixes: QTBUG-88361
Change-Id: I02e5639074247a58a7f53bd135a736cbe6e7d6e4
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>